# haskell-programming

./: *intero:haskell-programming:haskell-programming:repl*  .gitignore  GCD.hs  deps.sh  haskell-programming.cabal  pg1513.txt  stack.yaml  unpack.py  watchers.xml
app/: Main.hs
src/: AesonTest.hs  Caesar.hs  Ch10.hs  Ch11.hs  Ch11_2.hs  Ch12.hs  Ch13.hs  Ch15.hs  Ch16.hs  Ch17.hs  Ch18.hs  Ch19.hs  Ch20.hs  Ch21.hs  Ch4.hs  Ch6.hs  Ch7.hs  Ch8.hs  Dictionary.hs  Function.hs  FunctionTesting.hs  Hello.hs  HuttonsRazor.hs  Kleisli.hs  MonadIO.hs  MonadReaderTest.hs  MonadTransformers.hs  MonoidEx.hs  Morse.hs  Multiplication.hs  OptParse.hs  Origami.hs  QuickCheckTest.hs  Random.hs  SemiGroup.hs  SemiGroupEx.hs  Traversable.hs  Vigenere.hs
test/: Spec.hs
test/unit/: WordNumberSpec.hs
