name:                haskell-programming
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-programming#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Addition, Morse, Ch8
  build-depends:       base >= 4.7 && < 5
                     , text >= 1.2.2.2
                     , containers
                     , hspec
                     , QuickCheck
                     , JuicyPixels
                     , generic-deriving
                     , random
  hs-source-dirs:      src
  default-language:    Haskell2010

executable haskell-programming-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , QuickCheck
                     , haskell-programming
  default-language:    Haskell2010

test-suite property-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/property
  main-is:             Spec.hs
  build-depends:       base
                     , containers
                     , haskell-programming
                     , time
                     , bloodhound
                     , aeson >= 1.1.2.0
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite unit-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/unit  
  main-is:             Spec.hs
  other-modules:       WordNumberSpec
  build-depends:       base
                     , containers
                     , haskell-programming
                     , time
                     , bloodhound
                     , aeson >= 1.1.2.0
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell-programming
